--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -168,6 +168,24 @@ p {
           .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left h2 {
             font-weight: 600; }
 
+.card-detail-view .card-detail-view-bg {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("/img/eudc2017-bg-blur.jpg");
+  background-position: center;
+  background-size: cover; }
+
+.card-detail-view .scroll-content {
+  background: -webkit-linear-gradient(bottom left, rgba(212, 11, 82, 0.5) 0%, #000b66 100%);
+  background: -o-linear-gradient(bottom left, rgba(212, 11, 82, 0.5) 0%, #000b66 100%);
+  background: linear-gradient(to top right, rgba(212, 11, 82, 0.5) 0%, #000b66 100%); }
+  .card-detail-view .scroll-content > .scroll {
+    max-width: 800px;
+    margin: 0px auto;
+    padding-left: 10px;
+    padding-right: 10px; }
+
 /* Side Menu */
 .side-menu {
   background-image: url("/img/eudc2017-menu-bg-blur1.jpg"); }
