#109297574 user can navigate to maps view from side menu

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,7 +22,7 @@
           <i class="menu-item__icon menu-item__icon--feed ion-ios-home-outline"></i>Tournament Feed
         </ion-item>
         <div class="menu-item__divider"></div>
-        <ion-item class="menu-item" menu-close href="#">
+        <ion-item class="menu-item" menu-close href="#/app/map">
           <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Map
         </ion-item>
         <div class="menu-item__divider"></div>
