#109298116 when user navigates to maps view, a google maps is loaded and displayed

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Local map">
+<ion-view title="Local map">
     <ion-content>
         <div id="map" data-tap-disabled="true"></div>
     </ion-content>
