--- a/www/css/style.css
+++ b/www/css/style.css
@@ -104,3 +104,14 @@
 .ion-navicon {
     color: rgba(255, 255, 255, 0.9) !important;
 }
+
+/* Map */
+
+#map {
+    width: 100%;
+    height: 100%;
+}
+
+.scroll {
+    height: 100%;
+}
