#109298324 User can see event locations on map

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -41,8 +41,8 @@ p {
 .scroll {
   max-width: 800px;
   margin: 0px auto;
-  padding-left: 10px;
-  padding-right: 10px;
+  //padding-left: 10px;
+  //padding-right: 10px;
 }
 
 @media (min-width: 680px) {
