--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,4 @@
-<ion-view title="Local map">
+<ion-view title="Venue map">
     <ion-content>
         <div id="map" data-tap-disabled="true"></div>
     </ion-content>
