User wants to go to the about view #121681401

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -33,6 +33,10 @@
         <ion-item class="menu-item" menu-close href="#">
           <i class="menu-item__icon menu-item__icon--calendar ion-ios-calendar-outline"></i>Calendar
         </ion-item>
+        <div class="menu-item__divider"></div>
+        <ion-item class="menu-item" menu-close href="#/app/about">
+          <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>About
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
