--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,5 +1,28 @@
-<ion-view title="About the Tournament">
-    <ion-content>
-        <div id="about" data-tap-disabled="true"></div>
-    </ion-content>
+<ion-view title="About the Tournament" class="about">
+  <div class="feed-bg"></div>
+  <ion-content>
+    <div id="about" data-tap-disabled="true"></div>
+    <div class="content">
+      <h2>Lorem the some kind of heading ipsum</h2>
+      <p>Debating is greatest of all because:</p>
+      <ul>
+        <li>
+          you get to insult people in a polite manner
+        </li>
+        <li>
+          reasons
+        </li>
+        <li>
+          the last reason
+        </li>
+      </ul>
+      <h3>Smaller heading</h3>
+      <h4>Smallest heading</h4>
+      <p>Here's an image of a llama eating a plant:</p>
+      <img class="fit-img" src="http://www.eveandersson.com/photos/chile/casablanca-valley-emiliana-vineyards-white-llama-eating-lettuce-3-large.jpg" alt="llama" />
+
+      <h2>Conclusion</h2>
+      <p class="final">Now that we're done with the llama, we should probably find the real text that goes here.</p>
+    </div>
+  </ion-content>
 </ion-view>
