--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -12,8 +12,12 @@
                 <p>{{ card.description }}</p>
 
                 <p>{{ card.created | date:'dd MMMM, HH:mm' }}</p>
+                <div class="item item-footer">
+                    <div style="float:left"><img src="../img/evs_eng.png" id="footer-logo"></div>
+                    <div style="float:left"><img src="../img/tutDebateClub.jpg" id="footer-logo"></div>
+                    <div style="float:left"><img src="../img/TTU_alternatiivne_logo_EST_ENG_veeb.jpg" id="footer-logo">
+                    </div>
+                </div>
             </div>
-
-        </div>
     </ion-content>
 </ion-view>
