#109296384 User wants to see an empty calendar

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -28,6 +28,7 @@ $font-family-maven: "Maven Pro", sans-serif;
 $font-family-base: "Open Sans", sans-serif !default;
 
 @import "atoms/icons";
+@import "organisms/calendar";
 @import "blocks/forms";
 
 h1, h2, h3, h4, h5, h6 {
