--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,7 +30,7 @@
           <i class="menu-item__icon menu-item__icon--contacts ion-ios-people-outline"></i>Contacts
         </ion-item>
         <div class="menu-item__divider"></div>
-        <ion-item class="menu-item" menu-close href="#">
+        <ion-item class="menu-item" menu-close href="#/app/calendar">
           <i class="menu-item__icon menu-item__icon--calendar ion-ios-calendar-outline"></i>Calendar
         </ion-item>
         <div class="menu-item__divider"></div>
