--- a/scss/organisms/_calendar.scss
+++ b/scss/organisms/_calendar.scss
@@ -1,7 +1,8 @@
 .grid-header {
-  background-color: #aaa;
-  background-size: 34px;
-  border-bottom: 1px solid #ddd;
+  background: -webkit-linear-gradient(bottom left, darken(rgba(212, 11, 82, 0.7), 0%) 0%, darken(rgba(0, 27, 255, 1), 30%) 100%);
+  background: -o-linear-gradient(bottom left, darken(rgba(212, 11, 82, 0.7), 0%) 0%, darken(rgba(0, 27, 255, 1), 30%) 100%);
+  background: linear-gradient(to top right, darken(rgba(212, 11, 82, 0.7), 0%) 0%, darken(rgba(0, 27, 255, 1), 30%) 100%);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);;
   overflow: hidden;
   box-shadow: 0 0 3px 0;
   position: fixed;
@@ -20,14 +21,14 @@
   padding: 10px 5px;
   height: 40px;
   text-align: center;
-  background: #009d97;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.9);
   cursor: pointer;
   position: relative;
+  font-weight: bold;
 }
 
 .grid-header-label-divider {
-  border-right: 1px solid #cbcbcb;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);;
   position: static;
   right: 0;
   bottom: 0;
@@ -36,7 +37,6 @@
 
 .grid-header-Clock {
   text-align: left;
-  background-color: #aaa;
   width: 60px;
   height: 60px;
   position: fixed;
@@ -46,10 +46,10 @@
 }
 
 .grid-body {
+  font-family: "Open Sans", sans-serif;
 
   position: absolute;
   top: 40px !important;
-  background: #f7f7f7;
 }
 
 .ui-block {
@@ -67,8 +67,7 @@
   top: 0;
   display: block;
   z-index: 200;
-  border-right: 1px solid #ddd;
-  background: #eee;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
@@ -79,29 +78,31 @@
   top: 0px;
   display: block;
   z-index: 200;
-  border-right: 1px solid #ddd;
-  background: #eee;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
 .day-label {
   height: 24px;
   line-height: 25px;
+  font-weight: bold;
 
-  border-bottom: 1px solid #a6a8ab;
-  color: #57585a;
-  background-color: #CBCBCB;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .grid-time-label {
   height: 50px;
   top: 10px;
   line-height: 20px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding-left: 0;
 }
 
 .grid-times {
+  .grid-time-label {
+    color: rgba(255, 255, 255, 0.9);
+  }
 }
 
 .grid-body-labels {
@@ -114,15 +115,14 @@
   padding: 10px 5px;
   height: 50px;
   line-height: 49px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);;
   padding-left: 0;
 
   text-align: center;
-  color: #fff;
-  background-color: #fff;
+  color: rgba(255, 255, 255, 0.9);
   cursor: pointer;
   position: relative;
-  border: 1px solid #ddd;
+  border: 1px solid rgba(0, 0, 0, 0.1);;
 }
 
 .grid-sessions {
@@ -133,7 +133,7 @@
 .grid-sessions-day {
   position: relative;
   height: 1225px;
-  background: url(https://farm9.staticflickr.com/8617/16121120332_0c7b48b7c4_o.png) 60px 25px;
+  background: url('/img/transsquare.png') 60px 25px;
   min-width: 100%;
 }
 
@@ -141,11 +141,10 @@
   position: absolute;
   width: 118px;
   overflow: hidden;
-  border: 1px solid #bbb;
+  border: 1px solid rgba(0, 0, 0, 0.1);;
   font-size: 12px;
   cursor: pointer;
-  background: rgba(0, 157, 151, .85);
-  color: #fff;
+  color: rgba(255, 255, 255, 0.9);
   font-family: sans-serif;
 }
 
