--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -161,7 +161,7 @@ p {
   }
 }
 
-.tournament-feed, .about, .calendar {
+.tournament-feed, .about, .calendar .contacts {
 
   .timer-card__header {
     h3 {
