--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -26,7 +26,7 @@
           <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Map
         </ion-item>
         <div class="menu-item__divider"></div>
-        <ion-item class="menu-item" menu-close href="#">
+        <ion-item class="menu-item" menu-close href="#/app/contacts">
           <i class="menu-item__icon menu-item__icon--contacts ion-ios-people-outline"></i>Contacts
         </ion-item>
         <div class="menu-item__divider"></div>
