--- a/scss/organisms/_calendar.scss
+++ b/scss/organisms/_calendar.scss
@@ -2,7 +2,7 @@
   background: -webkit-linear-gradient(bottom left, darken(rgba(212, 11, 82, 0.7), 0%) 0%, darken(rgba(0, 27, 255, 1), 30%) 100%);
   background: -o-linear-gradient(bottom left, darken(rgba(212, 11, 82, 0.7), 0%) 0%, darken(rgba(0, 27, 255, 1), 30%) 100%);
   background: linear-gradient(to top right, darken(rgba(212, 11, 82, 0.7), 0%) 0%, darken(rgba(0, 27, 255, 1), 30%) 100%);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   overflow: hidden;
   box-shadow: 0 0 3px 0;
   position: fixed;
@@ -28,7 +28,7 @@
 }
 
 .grid-header-label-divider {
-  border-right: 1px solid rgba(0, 0, 0, 0.1);;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
   position: static;
   right: 0;
   bottom: 0;
@@ -106,7 +106,7 @@
 }
 
 .grid-body-labels {
-  padding-left: 0px;
+  padding-left: 0;
 }
 
 .grid-body-cell {
@@ -115,14 +115,14 @@
   padding: 10px 5px;
   height: 50px;
   line-height: 49px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding-left: 0;
 
   text-align: center;
   color: rgba(255, 255, 255, 0.9);
   cursor: pointer;
   position: relative;
-  border: 1px solid rgba(0, 0, 0, 0.1);;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .grid-sessions {
@@ -141,7 +141,7 @@
   position: absolute;
   width: 118px;
   overflow: hidden;
-  border: 1px solid rgba(0, 0, 0, 0.1);;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   font-size: 12px;
   cursor: pointer;
   color: rgba(255, 255, 255, 0.9);
