--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -262,12 +262,12 @@ p {
     .popup-container .popup .button:focus {
       background-color: #271274; }
 
-.tournament-feed .timer-card__header h3, .about .timer-card__header h3, .calendar .contacts .timer-card__header h3 {
+.tournament-feed .timer-card__header h3, .about .timer-card__header h3, .calendar .timer-card__header h3, .contacts .timer-card__header h3 {
   color: white;
   font-weight: 600;
   opacity: 0.9; }
 
-.tournament-feed .feed-bg, .about .feed-bg, .calendar .contacts .feed-bg {
+.tournament-feed .feed-bg, .about .feed-bg, .calendar .feed-bg, .contacts .feed-bg {
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -275,18 +275,18 @@ p {
   background-position: center;
   background-size: cover; }
 
-.tournament-feed .scroll-content, .about .scroll-content, .calendar .contacts .scroll-content {
+.tournament-feed .scroll-content, .about .scroll-content, .calendar .scroll-content, .contacts .scroll-content {
   background: -webkit-linear-gradient(bottom left, rgba(212, 11, 82, 0.5) 0%, #000b66 100%);
   background: -o-linear-gradient(bottom left, rgba(212, 11, 82, 0.5) 0%, #000b66 100%);
   background: linear-gradient(to top right, rgba(212, 11, 82, 0.5) 0%, #000b66 100%); }
-  .tournament-feed .scroll-content > .scroll, .about .scroll-content > .scroll, .calendar .contacts .scroll-content > .scroll {
+  .tournament-feed .scroll-content > .scroll, .about .scroll-content > .scroll, .calendar .scroll-content > .scroll, .contacts .scroll-content > .scroll {
     max-width: 800px;
     margin: 0px auto;
     padding-left: 10px;
     padding-right: 10px; }
-  .tournament-feed .scroll-content .list, .about .scroll-content .list, .calendar .contacts .scroll-content .list {
+  .tournament-feed .scroll-content .list, .about .scroll-content .list, .calendar .scroll-content .list, .contacts .scroll-content .list {
     padding-top: 10px; }
-    .tournament-feed .scroll-content .list .feed-card, .about .scroll-content .list .feed-card, .calendar .contacts .scroll-content .list .feed-card {
+    .tournament-feed .scroll-content .list .feed-card, .about .scroll-content .list .feed-card, .calendar .scroll-content .list .feed-card, .contacts .scroll-content .list .feed-card {
       margin-top: 0;
       margin-right: 0;
       padding-top: 0;
@@ -295,20 +295,20 @@ p {
       margin: 0;
       position: relative;
       background: none; }
-      .tournament-feed .scroll-content .list .feed-card.time-alert, .about .scroll-content .list .feed-card.time-alert, .calendar .contacts .scroll-content .list .feed-card.time-alert {
+      .tournament-feed .scroll-content .list .feed-card.time-alert, .about .scroll-content .list .feed-card.time-alert, .calendar .scroll-content .list .feed-card.time-alert, .contacts .scroll-content .list .feed-card.time-alert {
         background-color: rgba(0, 0, 0, 0.25) !important; }
-      .tournament-feed .scroll-content .list .feed-card .item-content, .about .scroll-content .list .feed-card .item-content, .calendar .contacts .scroll-content .list .feed-card .item-content {
+      .tournament-feed .scroll-content .list .feed-card .item-content, .about .scroll-content .list .feed-card .item-content, .calendar .scroll-content .list .feed-card .item-content, .contacts .scroll-content .list .feed-card .item-content {
         margin-bottom: 5px; }
-        .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left, .about .scroll-content .list .feed-card .item-content .item-avatar-left, .calendar .contacts .scroll-content .list .feed-card .item-content .item-avatar-left {
+        .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left, .about .scroll-content .list .feed-card .item-content .item-avatar-left, .calendar .scroll-content .list .feed-card .item-content .item-avatar-left, .contacts .scroll-content .list .feed-card .item-content .item-avatar-left {
           padding: 10px 0 10px 85px !important; }
-          .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left .ion-icon, .about .scroll-content .list .feed-card .item-content .item-avatar-left .ion-icon, .calendar .contacts .scroll-content .list .feed-card .item-content .item-avatar-left .ion-icon {
+          .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left .ion-icon, .about .scroll-content .list .feed-card .item-content .item-avatar-left .ion-icon, .calendar .scroll-content .list .feed-card .item-content .item-avatar-left .ion-icon, .contacts .scroll-content .list .feed-card .item-content .item-avatar-left .ion-icon {
             position: absolute;
             font-size: 50px;
             color: white;
             left: 24px;
             top: 29px;
             opacity: 0.7; }
-          .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left h2, .about .scroll-content .list .feed-card .item-content .item-avatar-left h2, .calendar .contacts .scroll-content .list .feed-card .item-content .item-avatar-left h2 {
+          .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left h2, .about .scroll-content .list .feed-card .item-content .item-avatar-left h2, .calendar .scroll-content .list .feed-card .item-content .item-avatar-left h2, .contacts .scroll-content .list .feed-card .item-content .item-avatar-left h2 {
             font-weight: 600; }
 
 .card-detail-view .card-detail-view-bg {
