--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -38,7 +38,7 @@ $dark:                            #444 !default;
 .grid-header-label {
   width: 120px;
   float: left;
-  padding: 10px 5px;
+  padding: 10px 0;
   height: 40px;
   text-align: center;
   color: rgba(255, 255, 255, 0.9);
@@ -135,7 +135,7 @@ $dark:                            #444 !default;
 .grid-sessions-day {
   position: relative;
   height: 1225px;
-  background: url("/img/transsquare.png") 60px 25px;
+  background: url("/img/transsquare.png") 60px 0;
   min-width: 100%; }
 
 .grid-session-cell {
