--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -73,7 +73,7 @@ p {
 .login {
   background-position: center;
   background-size: cover;
-  background-image: url('/img/eudc2017-bg.jpg');
+  background-image: url('../www/img/eudc2017-bg.jpg');
   width: 100vw !important;
   height: 100vh !important;
 
@@ -174,7 +174,7 @@ p {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background-image: url('/img/eudc2017-bg-blur.jpg');
+    background-image: url('../www/img/eudc2017-bg-blur.jpg');
     background-position: center;
     background-size: cover;
   }
@@ -238,7 +238,7 @@ p {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background-image: url('/img/eudc2017-bg-blur.jpg');
+    background-image: url('../www/img/eudc2017-bg-blur.jpg');
     background-position: center;
     background-size: cover;
   }
@@ -260,7 +260,7 @@ p {
 /* Side Menu */
 
 .side-menu {
-  background-image: url('/img/eudc2017-menu-bg-blur1.jpg');
+  background-image: url('../www/img/eudc2017-menu-bg-blur1.jpg');
 
   .menu-item {
     background: transparent !important;
@@ -367,3 +367,4 @@ p {
 
 // Include all of Ionic
 @import "../www/lib/ionic/scss/ionic";
+
