--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -271,7 +271,7 @@ p {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-image: url("/img/eudc2017-bg-blur.jpg");
+  background-image: url("/www/img/eudc2017-bg-blur.jpg");
   background-position: center;
   background-size: cover; }
 
@@ -315,7 +315,7 @@ p {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-image: url("/img/eudc2017-bg-blur.jpg");
+  background-image: url("/www/img/eudc2017-bg-blur.jpg");
   background-position: center;
   background-size: cover; }
 
