--- a/scss/organisms/_calendar.scss
+++ b/scss/organisms/_calendar.scss
@@ -102,6 +102,7 @@
 .grid-times {
   .grid-time-label {
     color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(0, 0, 255, 0.25);
   }
 }
 
