--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -210,7 +210,7 @@ p {
 .login {
   background-position: center;
   background-size: cover;
-  background-image: url("/img/eudc2017-bg.jpg");
+  background-image: url("../www/img/eudc2017-bg.jpg");
   width: 100vw !important;
   height: 100vh !important; }
   .login .scroll-content {
@@ -272,7 +272,7 @@ p {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-image: url("/www/img/eudc2017-bg-blur.jpg");
+  background-image: url("../www/img/eudc2017-bg-blur.jpg");
   background-position: center;
   background-size: cover; }
 
@@ -316,7 +316,7 @@ p {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-image: url("/www/img/eudc2017-bg-blur.jpg");
+  background-image: url("../www/img/eudc2017-bg-blur.jpg");
   background-position: center;
   background-size: cover; }
 
@@ -332,7 +332,7 @@ p {
 
 /* Side Menu */
 .side-menu {
-  background-image: url("/img/eudc2017-menu-bg-blur1.jpg"); }
+  background-image: url("../www/img/eudc2017-menu-bg-blur1.jpg"); }
   .side-menu .menu-item {
     background: transparent !important;
     border: none; }
