--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -373,8 +373,20 @@ p {
     top: 120px;
     background: none; }
 
-.about .content h2, .about .content h3, .about .content h4, .about .content p, .about .content li {
-  color: rgba(255, 255, 255, 0.9); }
+.about .content h2, .about .content h3, .about .content h4, .about .content li {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+
+.about .content p {
+  color: rgba(255, 255, 255, 0.9);
+  text-align: justify;
+}
+
+.about .content a {
+  color: #DAA8D1;
+  text-decoration: none;
+}
 
 .about .content h2 {
   margin: 14px 0 18px; }
@@ -10118,3 +10130,5 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+/* About Page */
