#109298978 User wants to see an send Question box and #132104275 Create realistic test data

--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -1,5 +1,9 @@
 <ion-view title="Contacts" class="contacts">
     <div class="feed-bg"></div>
     <ion-content>
+        <br>
+        <label class="item item-input">
+            <textarea placeholder="Send Question"></textarea>
+        </label>
     </ion-content>
 </ion-view>
