--- a/platforms/ios/www/templates/login.html
+++ b/platforms/ios/www/templates/login.html
@@ -1,25 +1,49 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
-  </ion-header-bar>
-  <ion-content>
-    <form ng-submit="doLogin()">
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
-        </label>
-        <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
-        </label>
-      </div>
+<ion-modal-view hide-nav-bar="true" class="login" id="login">
+
+  <ion-content padding="true" scroll="false">
+    <form ng-submit="doLogin()" name="loginForm" novalidate>
+      <div class="row responsive-md">
+
+        <div class="header padding text-center">
+          <img src="img/eudc2017-logo.png" alt="EUDC2017 logo" />
+        </div>
+
+        <div class="list login-input">
+            <label class="item item-input" ng-class="{ 'has-error' : loginForm.email.$invalid && loginForm.email.$touched}">
+              <span class="input-label"><i class="ion-person"></i></span>
+              <input type="email"
+                placeholder="E-mail"
+                name="email"
+                ng-model="loginData.email"
+                ng-minlength="6"
+                ng-pattern="/^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/"
+                required>
+            </label>
+
+            <div class="form-errors" ng-messages="loginForm.email.$error" ng-if="loginForm.email.$touched">
+              <div class="form-error" ng-message="minlength required pattern">Please enter a valid email address.</div>
+            </div>
+
+            <label class="item item-input" ng-class="{ 'has-error' : loginForm.password.$invalid && loginForm.password.$touched}">
+          <span class="input-label"><i class="ion-lock-combination"></i></span>
+          <input type="password"
+            placeholder="Password"
+            name="password"
+            ng-model="loginData.password"
+            ng-minlength="6"
+            required>
+          </label>
+        </div>
+
+        <div class="form-errors" ng-messages="loginForm.password.$error" ng-if="loginForm.password.$touched">
+          <div class="form-error" ng-message="minlength">Password has to consist of at least 6 characters.</div>
+          <div class="form-error" ng-message="required">Please enter your password.</div>
+        </div>
+
+        <button class="button button-block button-royal" type="submit" ng-disabled="loginForm.$invalid || isSubmitted">
+             Log In
+        </button>
     </form>
+    </div>
   </ion-content>
 </ion-modal-view>
