--- a/platforms/ios/www/templates/menu.html
+++ b/platforms/ios/www/templates/menu.html
@@ -12,23 +12,30 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" class="side-menu">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <img src="img/eudc2017-logo.png" alt="EUDC2017 logo" />
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+        <ion-item class="menu-item" menu-close href="#/app/tournamentFeed">
+          <i class="menu-item__icon menu-item__icon--feed ion-ios-home-outline"></i>Tournament Feed
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <div class="menu-item__divider"></div>
+        <ion-item class="menu-item" menu-close href="#/app/map">
+          <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Map
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
+        <div class="menu-item__divider"></div>
+        <ion-item class="menu-item" menu-close href="#/app/contacts">
+          <i class="menu-item__icon menu-item__icon--contacts ion-ios-people-outline"></i>Contacts
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <div class="menu-item__divider"></div>
+        <ion-item class="menu-item" menu-close href="#/app/calendar">
+          <i class="menu-item__icon menu-item__icon--calendar ion-ios-calendar-outline"></i>Calendar
+        </ion-item>
+        <div class="menu-item__divider"></div>
+        <ion-item class="menu-item" menu-close href="#/app/about">
+          <i class="menu-item__icon menu-item__icon--paper ion-ios-paper-outline"></i>About
         </ion-item>
       </ion-list>
     </ion-content>
