#121682825 User wants to see sponsor logos in the the detail view footer of the card

--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -14,7 +14,7 @@
                 <p>{{ card.created | date:'dd MMMM, HH:mm' }}</p>
             </div>
             <div class="item item-footer">
-                <div id="footer-logo-div"></div>
+                <div id="footer-logo-div"><img id="footer-logo" src="{{ logoUrl }}"></div>
             </div>
     </ion-content>
 </ion-view>
