--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -357,12 +357,19 @@ p {
 
 /* Pull Down To Refresh */
 
-.scroll-refresher .ionic-refresher-content {
+.spinner-ios, .spinner-ios-small {
+  stroke: rgba(255, 255, 255, 0.9) !important;
+}
+
+.scroll-refresher .ionic-refresher-content,
+.contacts p {
   color: rgba(255, 255, 255, 0.9) !important;
 }
 
-.spinner-ios, .spinner-ios-small {
-  stroke: rgba(255, 255, 255, 0.9) !important;
+.contacts a,
+.about .content a  {
+  color: rgba(209, 166, 195, 0.9);
+  text-decoration: none;
 }
 
 // Include all of Ionic
