#109298948 User wants to see static contact info

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -366,6 +366,11 @@ p {
   color: rgba(255, 255, 255, 0.9) !important;
 }
 
+.padding-div {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .contacts a,
 .about .content a  {
   color: rgba(209, 166, 195, 0.9);
