--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -406,7 +406,12 @@ p {
 .contacts p {
   color: rgba(255, 255, 255, 0.9) !important; }
 
-.contacts a, .about .content a {
+.padding-div {
+  padding-top: 10px;
+  padding-bottom: 10px; }
+
+.contacts a,
+.about .content a {
   color: rgba(209, 166, 195, 0.9);
   text-decoration: none; }
 
