--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -1,9 +1,25 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget id="com.ionicframework.eudc2017277548" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
-    <preference name="loglevel" value="DEBUG" />
     <feature name="Toast">
         <param name="android-package" value="nl.xservices.plugins.Toast" />
     </feature>
+    <feature name="Whitelist">
+        <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
+        <param name="onload" value="true" />
+    </feature>
+    <name>EUDC2017</name>
+    <description>
+        An Ionic Framework and Cordova project.
+    </description>
+    <author email="info.tallinneudc@debate.ee" href="http://tallinneudc.com/">
+      Tallinn EUDC 2017
+    </author>
+    <content src="index.html" />
+    <access origin="*" />
+    <allow-navigation href="http://188.166.104.203:7070" />
+    <allow-navigation href="*" />
+    <allow-navigation href="http://192.168.1.87:8100" />
+    <allow-intent href="*" />
     <icon density="ldpi" src="resources/android/icon/drawable-ldpi-icon.png" />
     <icon density="mdpi" src="resources/android/icon/drawable-mdpi-icon.png" />
     <icon density="hdpi" src="resources/android/icon/drawable-hdpi-icon.png" />
@@ -22,15 +38,7 @@
     <splash density="port-xhdpi" src="resources/android/splash/drawable-port-xhdpi-screen.png" />
     <splash density="port-xxhdpi" src="resources/android/splash/drawable-port-xxhdpi-screen.png" />
     <splash density="port-xxxhdpi" src="resources/android/splash/drawable-port-xxxhdpi-screen.png" />
-    <name>EUDC2017</name>
-    <description>
-        An Ionic Framework and Cordova project.
-    </description>
-    <author email="info.tallinneudc@debate.ee" href="http://tallinneudc.com/">
-      Tallinn EUDC 2017
-    </author>
-    <content src="index.html" />
-    <access origin="*" />
+    <preference name="loglevel" value="DEBUG" />
     <preference name="webviewbounce" value="false" />
     <preference name="UIWebViewBounce" value="false" />
     <preference name="DisallowOverscroll" value="true" />
@@ -38,4 +46,5 @@
     <preference name="BackupWebStorage" value="none" />
     <preference name="SplashScreen" value="screen" />
     <preference name="SplashScreenDelay" value="3000" />
+    <preference name="loadUrlTimeoutValue" value="600000" />
 </widget>
