#136054991 There was a tricky here

--- a/platforms/android/assets/www/templates/login.html
+++ b/platforms/android/assets/www/templates/login.html
@@ -5,7 +5,7 @@
       <div class="row responsive-md">
 
         <div class="header padding text-center">
-          <img src="img/eudc2017-logo.png" alt="EUDC2017 logo" />
+          <img src="./img/eudc2017-logo.png" alt="EUDC2017 logo" />
         </div>
 
         <div class="list login-input">
