--- a/platforms/android/assets/www/templates/menu.html
+++ b/platforms/android/assets/www/templates/menu.html
@@ -14,7 +14,7 @@
 
   <ion-side-menu side="left" class="side-menu">
     <ion-header-bar class="bar-stable">
-      <img src="img/eudc2017-logo.png" alt="EUDC2017 logo" />
+      <img src="./img/eudc2017-logo.png" alt="EUDC2017 logo" />
     </ion-header-bar>
     <ion-content>
       <ion-list>
