--- a/scss/organisms/_calendar.scss
+++ b/scss/organisms/_calendar.scss
@@ -134,7 +134,7 @@
 .grid-sessions-day {
   position: relative;
   height: 1200px;
-  background: url('/img/transsquare.png') 60px 0;
+  background: url('../img/transsquare.png') 60px 0;
   min-width: 100%;
 }
 
