--- a/www/templates/calendar.html
+++ b/www/templates/calendar.html
@@ -1,4 +1,4 @@
-<ion-view title="Calendar" class="calendar">
+﻿<ion-view title="Calendar" class="calendar">
     <div class="feed-bg"></div>
     <ion-pane>
         <ion-header-bar class="bar-dark" style="background-color:#009d97">
