--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,11 +1,11 @@
-<ion-modal-view hide-nav-bar="true" class="login" id="login">
+﻿<ion-modal-view hide-nav-bar="true" class="login" id="login">
 
   <ion-content padding="true" scroll="false">
     <form ng-submit="doLogin()" name="loginForm" novalidate>
       <div class="row responsive-md">
 
         <div class="header padding text-center">
-          <img src="img/eudc2017-logo.png" alt="EUDC2017 logo" />
+          <img src="./img/eudc2017-logo.png" alt="EUDC2017 logo" />
         </div>
 
         <div class="list login-input">
