--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Tournament feed" class="tournament-feed">
+﻿<ion-view view-title="Tournament feed" class="tournament-feed">
   <div class="feed-bg"></div>
     <ion-content>
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
