--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,4 +1,4 @@
-<ion-view title="About the Tournament" class="about">
+﻿<ion-view title="About the Tournament" class="about">
     <div class="feed-bg"></div>
     <ion-content>
         <div id="about" data-tap-disabled="true"></div>
@@ -36,7 +36,7 @@
                     experience the magic yourself. We could not be happier to welcome you to the European University
                     Debating Championship 2017!
                 </p>
-                <img class="fit-img" src="../img/Zeit_Debatte_Wien_-_Finale-02.jpg" alt="dabate image"/>
+                <img class="fit-img" src="./img/Zeit_Debatte_Wien_-_Finale-02.jpg" alt="dabate image"/>
                 <h4><b>The European University Debating Championship</b></h4>
                 <p class="pragraph">
                     The European Universities Debating Championship (EUDC) is an annual tournament in which debating
