--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -1,10 +1,10 @@
-<ion-view view-title="Card detail view" class="card-detail-view">
+﻿<ion-view view-title="Card detail view" class="card-detail-view">
     <div class="card-detail-view-bg"></div>
     <ion-content>
         <div class="list card">
 
             <div class="item item-avatar">
-                <img src="/img/eudc2017-logo.png">
+                <img src="./img/eudc2017-logo.png">
                 <h2>{{ card.title }}</h2>
             </div>
 
