--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -1,4 +1,4 @@
-<ion-view title="Contacts" class="contacts">
+﻿<ion-view title="Contacts" class="contacts">
     <div class="feed-bg"></div>
     <ion-content>
         <div class="padding-div">
