--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+﻿<ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
@@ -14,7 +14,7 @@
 
   <ion-side-menu side="left" class="side-menu">
     <ion-header-bar class="bar-stable">
-      <img src="img/eudc2017-logo.png" alt="EUDC2017 logo" />
+      <img src="./img/eudc2017-logo.png" alt="EUDC2017 logo" />
     </ion-header-bar>
     <ion-content>
       <ion-list>
