--- a/scss/organisms/_calendar.scss
+++ b/scss/organisms/_calendar.scss
@@ -95,14 +95,14 @@
   height: 50px;
   top: 10px;
   line-height: 20px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   padding-left: 0;
 }
 
 .grid-times {
   .grid-time-label {
     color: rgba(255, 255, 255, 0.9);
-    background-color: rgba(0, 0, 255, 0.25);
+    background-color: rgba(128, 0, 128, 0.8);
   }
 }
 
@@ -142,7 +142,7 @@
   position: absolute;
   width: 118px;
   overflow: hidden;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.25);
   font-size: 12px;
   cursor: pointer;
   color: rgba(255, 255, 255, 0.9);
@@ -157,11 +157,20 @@
 }
 
 .grid-session-title {
-  padding: 9px;
+  padding: 5px 9px;
   padding-right: 10px;
   font-weight: bold;
 }
 
 .grid-session-time {
   padding: 9px;
+}
+
+#grid-clock {
+  width: 59px;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  height: 3px;
+  background-color: rgba(92, 236, 1, 0.84);
 }
