--- a/www/templates/calendar.html
+++ b/www/templates/calendar.html
@@ -24,14 +24,15 @@
                     <div id="gridTimesHolder" class="grid-times-holder" ng-style="{'left':timerleft}" >
                         <!--<div class="day-label">{{day.day.substr(0, 3)}}</div>-->
                         <div class="grid-times" ng-repeat="hour in hours">
-                            <div class="grid-time-label">{{hour}}</div>
+                            <div class="grid-time-label"><p>{{hour}}</p></div>
                         </div>
+                        <div id="grid-clock" style="top: {{ clockPosition() }}"></div>
                     </div>
                     <div class="grid-sessions" ng-style="{'height' : (50 * hours.length) + 'px'}">
                         <div class="grid-sessions-day" ng-style="{'overflow': 'true', 'width' : (120 * EUDCDays.length + 60) + 'px'}"
                              >
                             <div ng-repeat="event in events| filter:{ dateformat: day.dateformat}">
-                                <div class="grid-session-cell" ng-style="{'top':event.top, 'left':event.left, 'height':event.height, 'background-color':event.color}">
+                                <div class="grid-session-cell" ng-style="{'top':event.top, 'left':event.left, 'height':event.height, 'background-color':event.color}" ng-click="goToEventDetail(event)">
                                     <i class="icon  grid-session-icon" ng-class="event.eventtype"></i>
                                     <div class="grid-session-title">{{event.eventname}}</div>
                                     <div class="grid-session-time">{{event.starthour}}-{{event.endhour}}</div>
