--- a/www/templates/event.html
+++ b/www/templates/event.html
@@ -4,7 +4,7 @@
         <div class="list card">
 
             <div class="item item-avatar">
-                <img src="/img/eudc2017-logo.png">
+                <img src="./img/eudc2017-logo.png">
                 <h2>{{ event.eventname }} @ {{ event.room }}</h2>
                 <h2>{{ event.starthour }} &ndash; {{ event.endhour }}, August {{ event.day }}</h2>
             </div>
